--- a/Backend/backend-update-and-delete_products/package.json
+++ b/Backend/backend-update-and-delete_products/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backend-create_products",
+  "name": "backend-update-and-delete_products",
   "version": "0.0.0-unreleased",
   "private": true,
   "scripts": {
@@ -15,7 +15,6 @@
     "eslint-config-next": "13.4.7",
     "mongoose": "^6.8.2",
     "next": "13.4.7",
-    "next-auth": "^4.24.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^6.0.0-rc.6",
@@ -30,7 +29,7 @@
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0"
   },
-  "description": "Backend Create: Products",
+  "description": "Backend Update and Delete: Products",
   "nf": {
     "template": "next"
   }
